--- a/package.json
+++ b/package.json
@@ -9,25 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@coral-xyz/anchor": "^0.30.0",
-    "@metaplex-foundation/mpl-token-metadata": "^2.13.0",
-    "@project-serum/anchor": "^0.26.0",
+    "@manahippo/aptos-wallet-adapter": "^1.0.10",
+    "aptos": "^1.7.2",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
-    "@solana/spl-token": "^0.4.8",
-    "@solana/wallet-adapter-base": "^0.9.23",
-    "@solana/wallet-adapter-material-ui": "^0.16.34",
-    "@solana/wallet-adapter-react": "^0.15.35",
-    "@solana/wallet-adapter-react-ui": "^0.9.35",
-    "@solana/wallet-adapter-wallets": "^0.19.32",
-    "@solana/web3.js": "^1.91.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.445.0",
     "next": "14.2.5",
-    "pino-pretty": "^11.0.0",
     "react": "^18",
     "react-dom": "^18",
     "swr": "^2.2.5",
